[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "louzou"
version = "0.1.0"
description = "A CLI applicatiom to monitor my medication intake and measure the frequency of my anxiety attacks."
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
  "Flask==2.3.3",
  "pandas==2.1.0",
  "matplotlib==3.7.3",
]

[tool.setuptools.packages.find]
include = ["louzou"]
